:sparkles: feat: Added performAction and calculateFadigueConsumption methods, added ActionType Enum